--- a/src/main/resources/templates/hello-template.html
+++ b/src/main/resources/templates/hello-template.html
@@ -5,6 +5,6 @@
     <title>Hello</title>
   </head>
   <body>
-    <p th:text="'안녕하세요. ' + ${greeting}">안녕하세요. 손님</p>
+    <p th:text="'안녕하세요. ' + ${name}"></p>
   </body>
 </html>
